// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lowering: match > lowers Block (let x=1; let y=2; add(x,y)) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = +(x1, x0)
      return x2",
  "term": "{
	let x
	: Num
	= 1;
	let y
	: Num
	= 2;
	return FFI.$add y x;
	}",
}
`;

exports[`Lowering: match > lowers match on literals (42, 0, wildcard) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 42
      jump b5
    b5:
      branch x0 { 42 -> b2 | 0 -> b3; default -> b4 }
    b2:
      let x2 = 1
      jump b0(x2)
    b3:
      let x3 = 0
      jump b0(x3)
    b4:
      let x4 = -1
      jump b0(x4)
    b0(x1):
      return x1
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match 42
| 42 -> 1
| 0 -> 0
| _ -> -1",
}
`;

exports[`Lowering: match > lowers match on nested struct with literal patterns 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = alloc { x: x0, y: x1 }
      let x3 = alloc { outer: x2 }
      jump b5
    b5(x3):
      let x5 = read x3.outer
      jump b4(x5)
    b4(x5):
      let x6 = read x5.x
      let x7 = read x5.y
      jump b3
    b3:
      branch x6 { 1 -> b2; default -> b1 }
    b2:
      jump b0(x7)
    b0(x4):
      return x4
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ outer: Struct [ x: 1, y: 2 ] ]
| Struct [ outer: Struct [ x: 1, y: b ] ] -> b",
}
`;

exports[`Lowering: match > lowers match on struct (field bindings) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = alloc { x: x0, y: x1 }
      let x4 = read x2.x
      let x5 = read x2.y
      let x6 = +(x4, x5)
      jump b0
    b0(x3):
      return x3
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ x: 1, y: 2 ]
| Struct [ x: a, y: b ] -> FFI.$add I0 I1",
}
`;

exports[`Lowering: match > lowers match on struct + variable ({ foo: 1 } -> 1 | o -> 0) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = alloc { foo: x0 }
      jump b6
    b6(x1):
      let x3 = read x1.foo
      jump b5
    b5:
      branch x3 { 1 -> b4; default -> b3 }
    b4:
      let x5 = 1
      jump b0(x5)
    b3:
      let x4 = 0
      jump b0(x4)
    b0(x2):
      return x2
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ foo: 1 ]
| Struct [ foo: 1 ] -> 1
| o -> 0",
}
`;

exports[`Lowering: match > lowers match on struct with literal patterns (x: 1 vs x: 2) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 10
      let x2 = alloc { x: x0, y: x1 }
      jump b6
    b6(x2):
      let x4 = read x2.x
      let x5 = read x2.y
      jump b5
    b5:
      branch x4 { 1 -> b2 | 2 -> b3; default -> b4 }
    b2:
      jump b0(x5)
    b3:
      let x6 = 1
      let x7 = +(x5, x6)
      jump b0(x7)
    b4:
      let x8 = +(x4, x5)
      jump b0(x8)
    b0(x3):
      return x3
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ x: 1, y: 10 ]
| Struct [ x: 1, y: b ] -> _
| Struct [ x: 2, y: b ] -> FFI.$add _ 1
| Struct [ x: a, y: b ] -> FFI.$add _ _",
}
`;

exports[`Lowering: match > lowers match on variant (Some/None) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = "Some"
      let x1 = 42
      let x2 = alloc { __tag: x0, Some: x1 }
      jump b4
    b4:
      let x7 = read x2.__tag
      branch x7 { Some -> b2(x2) | None -> b3(x2); default -> b1 }
    b2(scrut_0):
      let x4 = read scrut_0.Some
      jump b0(x4)
    b3(scrut_1):
      let x5 = read scrut_1.None
      let x6 = 0
      jump b0(x6)
    b0(x3):
      return x3
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ __tag: "Some", Some: 42 ]
| Variant [ Some: x ] -> _
| Variant [ None: _ ] -> 0",
}
`;

exports[`Lowering: match > lowers match on variant with struct payload (Some(Point)) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = "Some"
      let x1 = 1
      let x2 = 2
      let x3 = alloc { x: x1, y: x2 }
      let x4 = alloc { __tag: x0, Some: x3 }
      jump b7
    b7:
      let x11 = read x4.__tag
      branch x11 { Some -> b2(x4) | None -> b6(x4); default -> b1 }
    b2(scrut_0):
      let x6 = read scrut_0.Some
      jump b5(x6)
    b5(x6):
      let x7 = read x6.x
      let x8 = read x6.y
      jump b4
    b4:
      branch x7 { 1 -> b3; default -> b1 }
    b3:
      jump b0(x8)
    b6(scrut_1):
      let x9 = read scrut_1.None
      let x10 = 0
      jump b0(x10)
    b0(x5):
      return x5
    b1:
      let __match_fail = "non-exhaustive match"
      return __match_fail",
  "term": "match Struct [ __tag: "Some", Some: Struct [ x: 1, y: 2 ] ]
| Variant [ Some: Struct [ x: 1, y: b ] ] -> _
| Variant [ None: _ ] -> 0",
}
`;

exports[`Lowering: match > lowers reset(42) — no shift 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 42
      return x0",
  "term": "reset |42|",
}
`;

exports[`Lowering: match > lowers reset(Block) with captured frame — let x=1; shift k->k 10; x+100 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let k_0 = alloc { __env: env_0 }
      jump b1(k_0)
    b0(x2):
      return x2
    b2(x3, env_1, i_1):
      branch i_1 { 0 -> b3(x3, env_1) }
    b3(x4, env_2):
      let x5 = read env_2.v0
      let x6 = 100
      let x7 = +(x5, x6)
      jump b0(x7)
    b1(k_0):
      let x1 = 10
      let i_0 = 0
      let env_0 = read k_0.__env
      jump b2(x1, env_0, i_0)",
  "term": "reset |{
	let x
	: Num
	= 1;
	shift (λk -> k 10);
	return FFI.$add x 100;
	}|",
}
`;

exports[`Lowering: match > lowers reset(Block) — continuation uses resumption value and captured var (let v = shift; add(v, x)) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let k_0 = alloc { __env: env_0 }
      jump b1(k_0)
    b0(x2):
      return x2
    b2(x3, env_1, i_1):
      branch i_1 { 0 -> b3(x3, env_1) }
    b3(x4, env_2):
      let x5 = read env_2.v0
      let x6 = read env_2.v1
      let x7 = +(x5, x6)
      jump b0(x7)
    b1(k_0):
      let x1 = 99
      let i_0 = 0
      let env_0 = read k_0.__env
      jump b2(x1, env_0, i_0)",
  "term": "reset |{
	let x
	: Num
	= 7;
	let v
	: Num
	= shift (λk -> k 99);
	return FFI.$add v x;
	}|",
}
`;

exports[`Lowering: match > lowers reset(shift k -> (k 1) + (k 2)) — multishot 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let k_0 = alloc { __env: env_0 }
      jump b1(k_0)
    b0(x2):
      return x2
    b2(x3, env_1, i_2):
      branch i_2 { 0 -> b4(x3, env_1) | 1 -> b5(x3, env_1) }
    b4(x4, env_2):
      let env_3 = update-immutable env_2 { r0: x4 }
      let x1 = 2
      let i_1 = 1
      jump b2(x1, env_3, i_1)
    b5(x5, env_4):
      let env_5 = update-immutable env_4 { r1: x5 }
      let x6 = read env_5.r0
      let x7 = read env_5.r1
      let x8 = +(x6, x7)
      jump b0(x8)
    b1(k_0):
      let x0 = 1
      let i_0 = 0
      let env_0 = read k_0.__env
      jump b2(x0, env_0, i_0)",
  "term": "reset |shift (λk -> FFI.$add (k 1) (k 2))|",
}
`;

exports[`Lowering: match > lowers reset(shift k -> 42) — shift returns without resuming 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let k_0 = alloc { __env: env_0 }
      jump b1(k_0)
    b0(x1):
      return x1
    b2(x2, env_1):
      jump b0(x2)
    b1(k_0):
      let x0 = 42
      jump b0(x0)",
  "term": "reset |shift (λk -> 42)|",
}
`;

exports[`Lowering: match > lowers reset(shift(λk. k 42)) — resume returns 42 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let k_0 = alloc { __env: env_0 }
      jump b1(k_0)
    b0(x1):
      return x1
    b2(x2, env_1, i_1):
      branch i_1 { 0 -> b4(x2, env_1) }
    b4(x3, env_2):
      jump b0(x3)
    b1(k_0):
      let x0 = 42
      let i_0 = 0
      let env_0 = read k_0.__env
      jump b2(x0, env_0, i_0)",
  "term": "reset |shift (λk -> k 42)|",
}
`;

exports[`Lowering: primitives and ops > lowers (λx.x) 42 (indirect call) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      let x0 = 42
      let fnref_1 = read closure_0.__fn
      let env_2 = read closure_0.__env
      let x1 = call *fnref_1(env_2, x0)
      return x1
  fn f_0(env_1, x) entry=entry
    entry:
      return x",
  "term": "(λx -> x) 42",
}
`;

exports[`Lowering: primitives and ops > lowers (λx.λy.x) 1 2 (curried const) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_2 = alloc {  }
      let fnref_1 = &f_1
      let closure_1 = alloc { __fn: fnref_1, __env: env_2 }
      let x1 = 1
      let fnref_2 = read closure_1.__fn
      let env_4 = read closure_1.__env
      let x2 = call *fnref_2(env_4, x1)
      let x3 = 2
      let fnref_3 = read x2.__fn
      let env_5 = read x2.__env
      let x4 = call *fnref_3(env_5, x3)
      return x4
  fn f_0(env_1, y) entry=entry
    entry:
      let x0 = read env_1.v0
      return x0
  fn f_1(env_3, x) entry=entry
    entry:
      let env_0 = alloc { v0: x }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      return closure_0",
  "term": "(λx -> λy -> x) 1 2",
}
`;

exports[`Lowering: primitives and ops > lowers (λx.λy.x+y) 1 2 (curried closure with capture) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_2 = alloc {  }
      let fnref_1 = &f_1
      let closure_1 = alloc { __fn: fnref_1, __env: env_2 }
      let x2 = 1
      let fnref_2 = read closure_1.__fn
      let env_4 = read closure_1.__env
      let x3 = call *fnref_2(env_4, x2)
      let x4 = 2
      let fnref_3 = read x3.__fn
      let env_5 = read x3.__env
      let x5 = call *fnref_3(env_5, x4)
      return x5
  fn f_0(env_1, y) entry=entry
    entry:
      let x0 = read env_1.v0
      let x1 = +(x0, y)
      return x1
  fn f_1(env_3, x) entry=entry
    entry:
      let env_0 = alloc { v0: x }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      return closure_0",
  "term": "(λx -> λy -> FFI.$add x y) 1 2",
}
`;

exports[`Lowering: primitives and ops > lowers Lambda (closure) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      return closure_0
  fn f_0(env_1, x) entry=entry
    entry:
      let x0 = 1
      return x0",
  "term": "λx -> 1",
}
`;

exports[`Lowering: primitives and ops > lowers Lit(Num(42)) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 42
      return x0",
  "term": "42",
}
`;

exports[`Lowering: primitives and ops > lowers add(1, 2) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = +(x0, x1)
      return x2",
  "term": "FFI.$add 1 2",
}
`;

exports[`Lowering: primitives and ops > lowers nested Lambda 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_2 = alloc {  }
      let fnref_1 = &f_1
      let closure_1 = alloc { __fn: fnref_1, __env: env_2 }
      return closure_1
  fn f_0(env_1, y) entry=entry
    entry:
      let x0 = read env_1.v0
      return x0
  fn f_1(env_3, x) entry=entry
    entry:
      let env_0 = alloc { v0: x }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      return closure_0",
  "term": "λx -> λy -> x",
}
`;

exports[`Lowering: primitives and ops > lowers not(true) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = true
      let x1 = !(x0)
      return x1",
  "term": "FFI.$not true",
}
`;

exports[`Lowering: primitives and ops > lowers λx.x (identity, closed) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let env_0 = alloc {  }
      let fnref_0 = &f_0
      let closure_0 = alloc { __fn: fnref_0, __env: env_0 }
      return closure_0
  fn f_0(env_1, x) entry=entry
    entry:
      return x",
  "term": "λx -> x",
}
`;

exports[`Lowering: struct, proj, inj > lowers empty struct 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = alloc {  }
      return x0",
  "term": "Struct []",
}
`;

exports[`Lowering: struct, proj, inj > lowers inj(label, value, struct) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = alloc { x: x0 }
      let x2 = 2
      let x3 = update-immutable x1 { y: x2 }
      return x3",
  "term": "{ Struct [ x: 1 ] | y = 2 }",
}
`;

exports[`Lowering: struct, proj, inj > lowers proj(label, struct) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 42
      let x1 = alloc { x: x0 }
      let x2 = read x1.x
      return x2",
  "term": "(Struct [ x: 42 ]).x",
}
`;

exports[`Lowering: struct, proj, inj > lowers struct({ x: 1, y: 2 }) 1`] = `
{
  "mir": "module
  fn main entry=entry
    entry:
      let x0 = 1
      let x1 = 2
      let x2 = alloc { x: x0, y: x1 }
      return x2",
  "term": "Struct [ x: 1, y: 2 ]",
}
`;
